Wed Jun 25 15:47:46 2003  Tom Koelman <tkoelman@xs4all.nl>

	* Instance/subproject.make (subproject.def): Depend on DLL_DEF_INP.

2003-06-21  Adam Fedor  <fedor@gnu.org>

	* Instance/Documentation/autogsdoc.make: If not BASE_MAKE_LOADED
	print a better error message about needing to install GNUstep-base
	first.

2003-06-20  Adam Fedor  <fedor@gnu.org>

	* Version 1.7.1

2003-06-18  Adam Fedor  <fedor@gnu.org>

	* target.make (openbsd): Enable shared libs, use -fPIC not -fpic.

2003-06-17  Adam Fedor  <fedor@gnu.org>

	* Instance/Documentation/texi.make: Don't abort make if
	texi programs aren't available. Don't install if files not made.

2003-06-16  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Add option to disable moving obsolete dirs
	* GNUmakefile.in: Update for change.

2003-06-15  Adam Fedor  <fedor@gnu.org>

	* target.make (openbsd/SHARED_LIB_LINK_CMD): Use gcc to link
	the library.

2003-06-11  Adam Fedor  <fedor@gnu.org>

	* move_obsolete_paths.sh: Don't remove the Developer dir.

2003-06-06  Adam Fedor  <fedor@gnu.org>

	* target.make (openbsd/OBJ_MERGE_CMD): Add.

2003-06-05  Adam Fedor  <fedor@gnu.org>

	* config_thread.m: More complete thread test.
	* configure.ac: Add runtime based on RUNTIME_LIB

2003-06-03  Adam Fedor  <fedor@gnu.org>

	* target.make (darwin/BUNDLE_LD): Use libtool
	(darwin/AFTER_INSTALL_SHARED_LIB_CMD): Link to the LIB_LINK_FILE
	as well.

Tue Jun  3 11:51:02 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	* Instance/Documentation/autogsdoc.make (internal-doc-install_):
	Fixed typo - added missing ";".

2003-06-02 18:16  Alexander Malmberg <alexander@malmberg.org>

	* Instance/Documentation/autogsdoc.make (internal-doc-install_):
	Add a missing "\" line continuation.

	(internal-doc-uninstall_): Add an $(END_ECHO) to balance the
	echoing.

Mon Jun  2 10:21:11 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	* GNUmakefile.in (install): Only create the symlink Makefiles -->
	Library/Makefiles if symbolic links are available.  (Problems