@@ -1,3 +1,8 @@
+2003-06-25  Adam Fedor  <fedor@gnu.org>
+
+	* Documentation/GNUmakefile.in (after-install): Install man pages
+	* Documentation/GNUstep.7.gz: New file (from Martin Brecher).
+
 Wed Jun 25 15:47:46 2003  Tom Koelman <tkoelman@xs4all.nl>
 
 	* Instance/subproject.make (subproject.def): Depend on DLL_DEF_INP.
